# SpectrumOS

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  deploy.sh  pyproject.toml
.claude/: settings.local.json
config/: logging.yaml  settings.yaml
docs/: integration-guide.md  openclaw-skill-spec.md  project-status-and-roadmap.md
src/spectrum/: __init__.py  _version.py  cli.py  config.py  main.py
src/spectrum/agents/: _parsing.py  base.py  diffraction.py  dispersion.py  focus.py  prism.py
src/spectrum/api/: app.py  routes.py  schemas.py
src/spectrum/dashboard/: DASHBOARD_REWRITE_SPEC.md  dashboard.html  explorer.html  spectrum-os.service
src/spectrum/db/: __init__.py  activity_log.py  engine.py  fts.py  models.py  operations.py
src/spectrum/llm/: client.py  prompts.py  provider.py
src/spectrum/orchestrator/: __init__.py  event_bus.py  pipeline.py  scheduler.py
src/spectrum/tools/: content_extractor.py  search_providers.py  web_search.py
tests/: conftest.py
tests/test_db/: test_activity_log.py  test_card_links.py  test_card_tags.py  test_fts.py  test_operations.py  test_tags.py
tests/test_orchestrator/: test_scheduler.py
